--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- JTS et GeoJSON -->
+        <dependency>
+            <groupId>com.bedatadriven</groupId>
+            <artifactId>jackson-datatype-jts</artifactId>
+            <version>2.2</version>
+        </dependency>
+        
 	</dependencies>
 
 
